--- a/src/sample-app/result/views/index.html
+++ b/src/sample-app/result/views/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Cats vs Dogs -- Result</title>
-    <base href="/index.html">
     <meta name = "viewport" content = "width=device-width, initial-scale = 1.0">
     <meta name="keywords" content="docker-compose, docker, stack">
     <meta name="author" content="Docker">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/result/stylesheets/style.css' />
   </head>
   <body ng-controller="statsCtrl" >
      <div id="background-stats">
@@ -20,12 +19,12 @@
       <div id="content-container-center">
         <div id="choice">
           <div class="choice cats">
-            <div class="label">Cats</div>
+            <div class="label">__OPTION_A__</div>
             <div class="stat">{{aPercent | number:1}}%</div>
           </div>
           <div class="divider"></div>
           <div class="choice dogs">
-            <div class="label">Dogs</div>
+            <div class="label">__OPTION_B__</div>
             <div class="stat">{{bPercent | number:1}}%</div>
           </div>
         </div>
@@ -36,8 +35,8 @@
       <span ng-if="total == 1">{{total}} vote</span>
       <span ng-if="total >= 2">{{total}} votes</span>
     </div>
-    <script src="socket.io.js"></script>
-    <script src="angular.min.js"></script>
-    <script src="app.js"></script>
+    <script src="/result/socket.io.js"></script>
+    <script src="/result/angular.min.js"></script>
+    <script src="/result/app.js"></script>
   </body>
 </html>
